examples/compiler_errors/adversarial/common_dev_mistakes/UnknownIdentifierTypo.flx
// expect: compile_error
// expect-error: E004

module UnknownIdentifierTypo {
    fn bad() -> Unit with IO {
        prnit("x")
    }
}
